--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                 </li>
             </ul>
         </div>
+        <div class="credits">
+            <p>Tiktok: <a href="https://www.tiktok.com/@fexty7" target="_blank">
+            https://www.tiktok.com/@fexty7</a></p>
+            <p>Instagram: <a href="https://www.instagram.com/fextyv8/" target="_blank">
+            https://www.instagram.com/fextyv8/</a></p>
+            <p>Itch.io: </a><a target="_blank" href="https://fextyv8.itch.io/">
+            https://fextyv8.itch.io/</a></p>
+            <p>GitHub: <a target="_blank" href="https://github.com/fextyv8">
+            https://github.com/fextyv8</a></p>
+        </div>
         <script src="password.js"></script>
     </body>
 </html>
