--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </ul>
         </div>
         <div class="credits">
+            <p>Here is the author's credits: </p>
             <p>Tiktok: <a href="https://www.tiktok.com/@fexty7" target="_blank">
             https://www.tiktok.com/@fexty7</a></p>
             <p>Instagram: <a href="https://www.instagram.com/fextyv8/" target="_blank">
